# cppTraning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/examples/: CMakeLists.txt  README.md
src/examples/Class001/: HelloWorld.cc  hello_world.c
src/examples/Class002/: OutputTest.cc  output_test.c
src/examples/Class003/: InputTest.cc  input_test.c
src/examples/Class004/: Person.cc  Person.h  person.c  person.h
