add_executable(hello_world ./Class001/hello_world.c)
add_executable(HelloWorld ./Class001/HelloWorld.cc)
add_executable(output_test ./Class002/output_test.c)
add_executable(OutputTest ./Class002/OutputTest.cc)
add_executable(input_test ./Class003/input_test.c)
add_executable(InputTest ./Class003/InputTest.cc)
add_executable(person ./Class004/person.c)
add_executable(Person ./Class004/Person.cc)

